# venus

./: .gitignore  Cargo.toml  Makefile  README.md  rustfmt.toml
.cargo/: config.toml
.github/workflows/: openbench.yml  test.yml
chess/: Cargo.toml
chess/src/: defs.rs  lib.rs  main.rs
chess/src/helpers/: check.rs  cuckoo.rs  draw.rs  legal.rs  mod.rs  see.rs
chess/src/macros/: enums.rs  mod.rs  ops.rs
chess/src/movegen/: enumerate.rs  make_move.rs  mod.rs  perft.rs  update.rs
chess/src/tables/: leaping_piece.rs  mod.rs  sliding_piece.rs
chess/src/types/: bitboard.rs  board.rs  castling.rs  color.rs  direction.rs  dirtypiece.rs  eval.rs  mod.rs  move_list.rs  moves.rs  piece.rs  rank_file.rs  square.rs  zobrist.rs
cli/: Cargo.toml
cli/src/: lib.rs  main.rs  uci.rs
datagen/: Cargo.toml
datagen/src/: datagen.rs  genfens.rs  lib.rs  main.rs
datagen/src/formats/: marlinfmt.rs  mod.rs  virifmt.rs
engine/: Cargo.toml  build.rs
engine/src/: bench.rs  interface.rs  lib.rs
engine/src/history/: capturehist.rs  conthist.rs  corrhist.rs  hist.rs  mod.rs  movebuffer.rs  noisyhist.rs  pawnhist.rs  quiethist.rs
engine/src/movepick/: mod.rs  move_list.rs  perftmp.rs  pick_move.rs  score_move.rs
engine/src/position/: eval.rs  mod.rs  pos.rs
engine/src/position/movepick/: mod.rs  perftmp.rs  pick_move.rs  score_move.rs  scored_ml.rs  utils.rs
engine/src/search/: helpers.rs  iterative_deepening.rs  mod.rs  negamax.rs  pruning.rs  pv.rs  pvs.rs  pvsearch.rs  qsearch.rs  stack.rs
engine/src/tb/: attack_if.rs  binds.rs  mod.rs  probe.rs
engine/src/threading/: mod.rs  pv.rs  stack.rs  thread.rs  threadpool.rs
engine/src/time_management/: mod.rs  timecontrol.rs  timemanager.rs
engine/src/timeman/: clock.rs  mod.rs  time_control.rs
engine/src/tt/: bits.rs  entry.rs  mod.rs  table.rs
engine/src/tunables/: init_tunables.rs  mod.rs  params.rs
nnue/: Cargo.toml  build.rs
nnue/src/: accumulator.rs  arch.rs  embed.rs  finny.rs  lib.rs  main.rs  net.rs  network.rs  propagate.rs  utils.rs
nnue/src/arch/: flatten.rs  mod.rs  propagate.rs  utils.rs
nnue/src/inference/: accumulator.rs  features.rs  finny.rs  mod.rs  propagate.rs  sparse.rs
nnue/src/preprocess/: ftperm.rs  load_write.rs  mod.rs  (+3 more)
scripts/: compile_all.sh  datagen.sh  find_ftperm.py  quick1k.sh
utils/: Cargo.toml
utils/src/: lib.rs  macros.rs  memory.rs  parse.rs  rng.rs
(+6 files in other folders)
