[package]
name = "cli"
version = "0.0.1"
edition = "2024"
authors = ["TheGogy"]

[dependencies]
anyhow = "1.0.103"
engine = { path = "../engine" }
nnue = { path = "../nnue/" }
clap = { version = "4.6.1", features = ["derive"] }

[features]
tune = ["engine/tune"]
syzygy = ["engine/syzygy"]
embed = ["nnue/embed"]
embed_direct = ["nnue/embed_direct"]
nnz_logging = ["nnue/nnz_logging", "engine/nnz_logging"]
