[package]
name = "datagen"
version = "0.0.1"
edition = "2024"

[dependencies]
chess = { path = "../chess" }
engine = { path = "../engine", features = ["datagen", "syzygy"] }
nnue = { path = "../nnue" }
clap = { version = "4.6.1", features = ["derive"] }
arrayvec = "0.7.6"
ctrlc = "3.5.2"
anyhow = "1.0.102"
chrono = "0.4.44"
fastrand = "2.4.1"
humantime = "2.3.0"

[features]
syzygy = ["engine/syzygy"]
embed = ["nnue/embed"]
