[package]
name = "engine"
version = "0.5.2"
edition = "2024"
authors = ["TheGogy"]

[lib]
doctest = false

[dependencies]
chess = { path = "../chess" }
utils = { path = "../utils" }
nnue = { path = "../nnue" }

[build-dependencies]
cc = { version = "1.0.73", optional = true }
bindgen = { version = "0.72.1", optional = true }

[features]
tune = []
syzygy = ["dep:cc", "dep:bindgen"]
