[package]
name = "engine"
version = "0.5.4"
edition = "2024"
authors = ["TheGogy"]

[lib]
doctest = false

[dependencies]
anyhow = "1.0.104"
chess = { path = "../chess" }
utils = { path = "../utils" }
nnue = { path = "../nnue" }

[build-dependencies]
cc = { version = "1.3.0", optional = true }
bindgen = { version = "0.72.1", optional = true }

[features]
tune = []
datagen = []
syzygy = ["dep:cc", "dep:bindgen"]
nnz_logging = ["nnue/nnz_logging"]
